--- a/views/conversacion.erb
+++ b/views/conversacion.erb
@@ -1,5 +1,15 @@
 <html>
+<head><title>Leyendo conversacion</title>
+<link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap.css" />
+</head>
 <body>
+<div class="navbar">
+ <div class="navbar-inner">
+<label class="brand">Sistema automatizador de conversaciones</label>
+ <ul class="nav">
+<li class="active"><a>Leyendo conversacion</a></li>
+</div>
+</div>
 <%
 conversacion.each do |con|
 %>
