--- a/views/conversacion.erb
+++ b/views/conversacion.erb
@@ -14,8 +14,8 @@
 conversacion.each do |con|
 %>
 
-<label style="color:#000000"><%=con['mensaje']%></label><br />
-<label title="<%=con['texto']%>" style="color:#FF0000"><%=con['rh_texto']%></label><br />
+<p><label style="color:#000000"><%=con['mensaje']%></label></p>
+<p><label title="<%=con['texto']%>" style="color:#FF0000"><%=con['rh_texto']%></label></p>
 
 <%
 end
