Cambiando de automatizador a asistente en las vistas

--- a/views/index.erb
+++ b/views/index.erb
@@ -52,7 +52,7 @@ ayudante.style.display="block";
 <body>
 <div class="navbar">
  <div class="navbar-inner">
-<label class="brand">Sistema automatizador de conversaciones</label>
+<label class="brand">Sistema asistente de conversaciones</label>
  <ul class="nav">
 <li class="active"><a>Conversación - <%=cid%></a></li>
 </div>
