--- a/views/conversacion.erb
+++ b/views/conversacion.erb
@@ -5,7 +5,7 @@
 <body>
 <div class="navbar">
  <div class="navbar-inner">
-<label class="brand">Sistema automatizador de conversaciones</label>
+<label class="brand">Sistema asistente de conversaciones</label>
  <ul class="nav">
 <li class="active"><a>Leyendo conversacion</a></li>
 </div>
