--- a/views/responder.erb
+++ b/views/responder.erb
@@ -66,7 +66,7 @@ xmlhttp.onreadystatechange=function(){
 <body>
 <div class="navbar">
  <div class="navbar-inner">
-<label class="brand">Sistema automatizador de conversaciones</label>
+<label class="brand">Sistema asistente de conversaciones</label>
  <ul class="nav">
 <li class="active"><a>Respondiendo Conversación</a></li>
 </div>
