--- a/views/index.erb
+++ b/views/index.erb
@@ -10,10 +10,16 @@ function enviarMensaje(){
 	var declaracion=document.getElementsByName("declaracion")[0];
 	var tipo=document.getElementsByName("tipo")[0];
 	var respuestas=document.getElementsByName("respuestas")[0];
-	var origen=document.getElementsByName("origen")[0];
+	var origen=document.getElementsByName("origen[]")[0];
+	var origenes = "";
+	for(var i =0; i<origen.options.length; i++){
+		if(origen.options[i].selected){				
+			origenes+=(origen.name+"="+origen.options[i].value+"&");
+		}
+	}
 	xmlhttp.open("POST","/crear/<%=cid%>",true);
 	xmlhttp.setRequestHeader("Content-type","application/x-www-form-urlencoded");
-	xmlhttp.send(declaracion.name+"="+declaracion.value+"&"+tipo.name+"="+tipo.value+"&"+respuestas.name+"="+respuestas.value+"&"+origen.name+"="+origen.value);
+	xmlhttp.send(declaracion.name+"="+declaracion.value+"&"+tipo.name+"="+tipo.value+"&"+respuestas.name+"="+respuestas.value+"&"+origenes);
 	return false;
 }
 
@@ -21,7 +27,7 @@ xmlhttp.onreadystatechange=function(){
 	if(xmlhttp.readyState==4 && xmlhttp.status==200){
 		document.getElementById("estado").innerHTML="Mensaje Agregado exitosamente";
 		document.getElementById("estado").class="text-success";		
-		document.getElementsByName("origen")[0].innerHTML=xmlhttp.responseText;
+		document.getElementsByName("origen[]")[0].innerHTML=xmlhttp.responseText;
 		document.getElementsByName("declaracion")[0].value="";
 		document.getElementsByName("respuestas")[0].value="";
 	}else if(xmlhttp.readyState==4 && xmlhttp.status!=200){
@@ -65,7 +71,7 @@ ayudante.style.display="block";
 <div id="span1">Tipo de respuestas: </div><div id="span2"><select name="tipo" onfocus="ayudante('2')"><option value="abcd">a, b, c o d</option><option value="FREE">Respuesta libre</option><option value="MS">Seleccion Multiple</option></select></div>
 </div>
 <textarea name="respuestas" placeholder="Digitar potenciales respuestas por linea..." cols="50" onfocus="ayudante('3')"></textarea><br/>
-<select name="origen" onfocus="ayudante('4')">
+<select name="origen[]" onfocus="ayudante('4')" multiple>
 <option value="">Basado en mensaje/respuesta</option>
 <%
 mensajes.each do |mensaje|
