--- a/views/index.erb
+++ b/views/index.erb
@@ -1,105 +1,53 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Conversacion - <%=cid%></title>
+<title>Bienvenido a SAC | Sistema Asistente de Conversaciones</title>
 <link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap.css" />
-</head>
 <script type="text/javascript">
 xmlhttp=new XMLHttpRequest();
-function enviarMensaje(){
-	var declaracion=document.getElementsByName("declaracion")[0];
-	var tipo=document.getElementsByName("tipo")[0];
-	var respuestas=document.getElementsByName("respuestas")[0];
-	var origen=document.getElementsByName("origen[]")[0];
-	var origenes = "";
-	for(var i =0; i<origen.options.length; i++){
-		if(origen.options[i].selected){				
-			origenes+=(origen.name+"="+origen.options[i].value+"&");
-		}
+function _conClave(a){
+	if(a.checked){
+		document.getElementsByName("clave")[0].disabled = false;
+	}else{
+		document.getElementsByName("clave")[0].disabled = true;
 	}
-	xmlhttp.open("POST","/crear/<%=cid%>",true);
-	xmlhttp.setRequestHeader("Content-type","application/x-www-form-urlencoded");
-	xmlhttp.send(declaracion.name+"="+declaracion.value+"&"+tipo.name+"="+tipo.value+"&"+respuestas.name+"="+respuestas.value+"&"+origenes);
-	return false;
 }
-
 xmlhttp.onreadystatechange=function(){
 	if(xmlhttp.readyState==4 && xmlhttp.status==200){
-		document.getElementById("estado").innerHTML="Mensaje Agregado exitosamente";
-		document.getElementById("estado").class="text-success";		
-		document.getElementsByName("origen[]")[0].innerHTML=xmlhttp.responseText;
-		document.getElementsByName("declaracion")[0].value="";
-		document.getElementsByName("respuestas")[0].value="";
+		document.getElementById("conversaciones").innerHTML = xmlhttp.responseText;
 	}else if(xmlhttp.readyState==4 && xmlhttp.status!=200){
-		document.getElementById("estado").class="text-error";		
-		document.getElementById("estado").innerHTML="Intente de nuevo que ha ocurrido un error "+xmlhttp.status;
+		
 	}
 }
-function ayudante(id){
-var ayudante = document.getElementById("ayudante");
-	switch(id){
-		case '1':
-			ayudante.innerHTML = "<strong>Mensaje </strong>Texto que vera el usuario receptor.";
-		break;
-		case '2':
-			ayudante.innerHTML = "<strong>Tipo de mensaje </strong><ul><li>a, b, c o d para solo seleccionar una respuesta</li><li>Respuesta libre permite responder lo que sea</li><li>Seleccion multiple permite responder con mas de un elemento</li><ul>";
-		break;
-		case '3':
-			ayudante.innerHTML = "<strong>Potenciales respuestas </strong>Digitar los diferentes textos por linea como respuestas";
-		break;
-		case '4':
-			ayudante.innerHTML = "<strong>Mensaje Basado </strong>En esta se especifica a partir de cual respuesta o mensaje anterior se mostraria el mensaje actual";
-		break;
+function cargarConversaciones(){
+	if(typeof(Storage)!==""){
+		if(localStorage.conversaciones != "undefined"){
+			xmlhttp.open("POST","/conversaciones",true);
+			xmlhttp.setRequestHeader("Content-type","application/x-www-form-urlencoded");
+			xmlhttp.send("conversaciones="+localStorage.conversaciones);
+		}else{
+			localStorage.conversaciones = "";
+		}
 	}
-ayudante.style.display="block";
 }
-
 </script>
-<body>
+</head>
+<body onload="cargarConversaciones()">
 <div class="navbar">
  <div class="navbar-inner">
 <label class="brand">Sistema asistente de conversaciones</label>
- <ul class="nav">
-<li class="active"><a>Conversación - <%=cid%></a></li>
 </div>
 </div>
-<div class="row">
-<div class="span5">
-<form action="/crear/<%=cid%>" name="pregunta" method="post" onsubmit="return enviarMensaje()">
-<div id="row"><input type="text" name="declaracion" placeholder="Digitar mensaje..." size="50" onfocus="ayudante('1')"/></div>
-<div id="row">
-<div id="span1">Tipo de respuestas: </div><div id="span2"><select name="tipo" onfocus="ayudante('2')"><option value="abcd">a, b, c o d</option><option value="FREE">Respuesta libre</option><option value="MS">Seleccion Multiple</option></select></div>
-</div>
-<textarea name="respuestas" placeholder="Digitar potenciales respuestas por linea..." cols="50" onfocus="ayudante('3')"></textarea><br/>
-<select name="origen[]" onfocus="ayudante('4')" multiple>
-<option value="">Basado en mensaje/respuesta</option>
-<%
-mensajes.each do |mensaje|
-%>
-<option value="m<%=mensaje['id']%>"><%=mensaje['mensaje']%></option>
-<%
-
-respuestas.each do |respuesta|
-if respuesta['mensajeid'] == mensaje['id']
-%>
-<option value="r<%=respuesta['id']%>">&nbsp;&nbsp;<%=respuesta['texto']%></option>
-<%
-end
-end
-end
-%>
-</select>
-<div class="input-append">
-<input type="submit" value="Guardar declaracion" class="btn btn-primary btn-mini"/><input type="reset" value="Cancelar" class="btn btn-mini"/><br/>
-</div>
-<p class="text-success"><label id="estado"></label></p>
+<div>
+<form action="/crear/nuevo" name="conversacion" method="post">
+<p>Para crear una nueva conversacion presione el siguiente boton</p>
+<input type="submit" value="Crear conversacion" />
+<p>¿Desea proteger la conversacion con una clave? <input type="checkbox" value="true" name="_clave" onchange="_conClave(this)"/></p>
+<input type="password" name="clave" disabled="true" maxlength="4" size="4" style="width: 50px"/> 
 </form>
 </div>
-<div class="span6 alert alert-info" id="ayudante" style="display:none"></div>
-</div>
-<div class="row">
-Cuando termine de construir la conversacion, copie el siguiente link y envie al receptor:<br/>
-<input type="text" value="<%=link%>" readonly size="50"/>
+<div id="conversaciones">
+
 </div>
 </body>
 </html>
