Soporte de Seguridad

--- a/views/construir.erb
+++ b/views/construir.erb
@@ -69,6 +69,10 @@ function agregarConversacion(){
 <label class="brand">Sistema asistente de conversaciones</label>
  <ul class="nav">
 <li class="active"><a>Conversación - <%=cid%></a></li>
+<li class=""><a>Inicio</a></li>
+<li class=""><a>Como usar</a></li>
+<li class=""><a>Contacto</a></li>
+</ul>
 </div>
 </div>
 <div class="row">
