--- a/views/conver.erb
+++ b/views/conver.erb
@@ -1,10 +1,18 @@
 <h6>Conversaciones ya trabajadas</h6>
-<table>
+<table class="table table-hover">
 <tr><td>ID</td><td>Fecha de creacion</td><td>Fecha de respondida</td></tr>
 <%
 conversaciones.each do |c|
+	if c['fechamodificacion'].to_s != ""
 %>
-<tr>
+<tr class="success">
+<%
+	else
+%>
+<tr class="warning">
+<%
+	end
+%>
 <td><%=c['id']%></a></td><td><a href="/crear/<%=c['id']%>"><%=c['fechacreacion']%></a></td><td><a href="/leer/<%=c['id']%>"><%=c['fechamodificacion']%></a></td>
 </tr>
 <%
