--- a/views/conversacion.erb
+++ b/views/conversacion.erb
@@ -8,6 +8,10 @@
 <label class="brand">Sistema asistente de conversaciones</label>
  <ul class="nav">
 <li class="active"><a>Leyendo conversacion</a></li>
+<li class=""><a>Inicio</a></li>
+<li class=""><a>Como usar</a></li>
+<li class=""><a>Contacto</a></li>
+</ul>
 </div>
 </div>
 <%
