--- a/views/responder.erb
+++ b/views/responder.erb
@@ -82,6 +82,9 @@ var activo = false;
 <label class="brand">Sistema asistente de conversaciones</label>
  <ul class="nav">
 <li class="active"><a>Respondiendo Conversación</a></li>
+<li class=""><a>Inicio</a></li>
+<li class=""><a>Como usar</a></li>
+<li class=""><a>Contacto</a></li>
 </div>
 </div>
 <div id="conversacion" style="background-color: #ECECEC; width: 30%; height: 60%">
