Mejora vista responder

--- a/views/responder.erb
+++ b/views/responder.erb
@@ -87,7 +87,7 @@ var activo = false;
 <li class=""><a>Contacto</a></li>
 </div>
 </div>
-<div id="conversacion" style="background-color: #ECECEC; width: 30%; height: 60%">
+<div id="conversacion" style="background-color: #ECECEC;">
 
 <p><label id='emisor'><%=mensaje%></label></p>
 
