Agregando contacto a las vistas

--- a/views/construir.erb
+++ b/views/construir.erb
@@ -113,5 +113,7 @@ end
 Cuando termine de construir la conversacion, copie el siguiente link y envie al receptor:<br/>
 <input type="text" value="<%=link%>" readonly size="50"/>
 </div>
+<hr />
+<p>Hecho por Edgar Polanco <a href="http://twitter.com/theboss_edgar">Twitter </a><a href="http://github.com/thebossedgar/sac2">GitHub </a><a href="mailto:theboss.edgar14@gmail.com">E-mail</a></p>
 </body>
 </html>
