--- a/views/index.erb
+++ b/views/index.erb
@@ -54,5 +54,7 @@ function cargarConversaciones(){
 <div id="conversaciones">
 
 </div>
+<hr />
+<p>Hecho por Edgar Polanco <a href="http://twitter.com/theboss_edgar">Twitter </a><a href="http://github.com/thebossedgar/sac2">GitHub </a><a href="mailto:theboss.edgar14@gmail.com">E-mail</a></p>
 </body>
 </html>
