--- a/views/responder.erb
+++ b/views/responder.erb
@@ -125,5 +125,7 @@ end
 <textarea name="texto" disabled="true"></textarea>
 <input type="submit" value="Continuar" class="btn btn-mini" id="Continuar" disabled="true"/>
 </form>
+<hr />
+<p>Hecho por Edgar Polanco <a href="http://twitter.com/theboss_edgar">Twitter </a><a href="http://github.com/thebossedgar/sac2">GitHub </a><a href="mailto:theboss.edgar14@gmail.com">E-mail</a></p>
 </body>
 </html>
