--- a/views/conversacion.erb
+++ b/views/conversacion.erb
@@ -8,9 +8,7 @@
 <label class="brand">Sistema asistente de conversaciones</label>
  <ul class="nav">
 <li class="active"><a>Leyendo conversacion</a></li>
-<li class=""><a>Inicio</a></li>
-<li class=""><a>Como usar</a></li>
-<li class=""><a>Contacto</a></li>
+<li class=""><a href="../../">Inicio</a></li>
 </ul>
 </div>
 </div>
