--- a/views/construir2.erb
+++ b/views/construir2.erb
@@ -1,4 +1,3 @@
-<option value="">Basado en mensaje/respuesta</option>
 <%
 mensajes.each do |mensaje|
 %>
@@ -8,7 +7,7 @@ mensajes.each do |mensaje|
 respuestas.each do |respuesta|
 if respuesta['mensajeid'] == mensaje['id']
 %>
-<option value="r<%=respuesta['id']%>">&nbsp;&nbsp;<%=respuesta['texto']%></option>
+<option value="r<%=respuesta['id']%>">&nbsp;&nbsp;&nbsp;<%=respuesta['texto']%></option>
 <%
 end
 end
