--- a/views/responder2.erb
+++ b/views/responder2.erb
@@ -1,6 +1,7 @@
 <input type="hidden" value="<%=mensaje%>" name="mensaje"/>
 <input type="hidden" value="<%=mensajeid%>" name="mensajeid"/>
 <input type="hidden" value="<%=tipo%>" name="tipo"/>
+<input type="hidden" value="<%=conversacionhistorial%>" name="conversacionhistorial"/>
 <%
 if respuestas != ""
 %>
